--- a/mod-01/index.html
+++ b/mod-01/index.html
@@ -14,6 +14,7 @@
     <button id="add">Add</button>
     <button id="subtract">Subtract</button>
     <pre id="result"></pre>
+    <script src="//code.jquery.com/jquery.js">   </script>
     <script src="demo.js"></script>
 </body>
 
