--- a/mod-04/zones-demo/index.html
+++ b/mod-04/zones-demo/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Zone.js Basic Demo</title>
-    <!--<script src="./node_modules/zone.js/dist/zone.js"></script>-->
-    <!--<script src="./node_modules/zone.js/dist/long-stack-trace-zone.js"></script>-->
+    <script src="./node_modules/zone.js/dist/zone.js"></script>
+    <script src="./node_modules/zone.js/dist/long-stack-trace-zone.js"></script>
 </head>
 
 <body>
